# ashare-data

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyproject.toml.orig
app/: Dockerfile  README.md  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2026_03_24_add_consecutive_red_daily.py  2026_03_25_add_new_high_daily.py  2026_04_01_rename_consecutive_red_to_red_window.py  2026_04_02_add_theme_member_stock.py
app/app/: __init__.py  cli.py  main.py
app/app/core/: __init__.py  config.py  runtime.py  trade_calendar.py
app/app/db/: session.py
app/app/models/: __init__.py  base.py  consecutive_red_daily.py  market_emotion_daily.py  market_review_daily.py  new_high_daily.py  red_window_daily.py  run.py  theme_emotion_daily.py  theme_member_stock.py  theme_pool_daily.py  theme_stock_daily.py  trend_pool_daily.py
app/app/pipelines/: __init__.py  build_consecutive_red.py  build_emotion_facts.py  build_market_review.py  build_new_high.py  build_red_window.py  build_theme_pool.py  (+5 more)
app/deploy/: ashare-platform.cron  run_scheduled_collect.sh  start.sh  supervisord.conf
app/tests/: test_api_routes.py  test_app_import.py  test_build_emotion_facts.py  test_build_market_review.py  test_build_theme_pool.py  test_build_trend_pool.py  test_cleanup_ephemeral_data.py  test_cli.py  test_collect_all.py  test_collect_ephemeral_task.py  test_config.py  test_market_review_semantic_enricher.py  test_models.py  test_readme_commands.py  test_red_for_n_days.py  test_task_run_logging.py  test_theme_semantic_boundary.py  test_theme_semantic_enricher.py
(+116 files in other folders)
