[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-platform-backend"
version = "0.1.0"
description = "A-share platform backend with task pipelines and read-only HTTP APIs"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0,<2.0",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0,<3.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
ashare-platform = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
